tests/instantiating/range_negative_value/stderr.golden
error: range property value must be natural, value -127 is negative
bus.fbd +2:20
   |
 2 | 	C config; range = -127
   | 	                  ^^^^
